try 3 fix the scrollbar and the cards' flipping

--- a/style.css
+++ b/style.css
@@ -495,14 +495,14 @@ iframe {
     display: flex;
     flex-direction: row;
     flex-wrap: nowwrap;  /*prima era wrap*/     
-    justify-content: center;
+    /*justify-content: center;*/
     overflow-x: auto;   /*prima era visible*/
     
     -webkit-overflow-scrolling: touch;
     gap: 20px;
   }
+
   .timeline-cards {
-  
     display: flex;
     max-width: 500px;
     height: 60vh;
@@ -510,8 +510,9 @@ iframe {
     gap: 20px;
     padding: 0 10px;
     flex-wrap: nowwrap; /*prima era wrap*/
-    justify-content: center;
-    overflow-x: visible; 
+    /*justify-content: center;*/
+    overflow-x: auto; /*prima era visible*/
+    -webkit-overflow-scrolling: touch;
   }
 
    .timeline-cards::-webkit-scrollbar {
@@ -525,13 +526,15 @@ iframe {
 
   .flip-card {
     max-width: 500px;
-    height: 60vh;
+    min-height: 300px;
+    height: 60vw; /*proporzionale alla larghezza*/
     margin: 10px auto;
     max-height: 80vh;
   }
   .flip-card-back {
     overflow-y: auto;
     max-height: 380px; 
+    pointer-events: none;   
   }
   .card h3 {
     font-size: 1.2rem;
